[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/MenuScript.gd" type="Script" id=1]
[ext_resource path="res://Premade/nokiafc22.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Premade/dyn_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/stonk.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="MenuRoot" type="Node2D"]
scale = Vector2( 64, 64 )
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -110 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Node2D"]
margin_left = 3.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 100.0
rect_scale = Vector2( 0.75, 0.75 )

[node name="Label3" type="Label" parent="Node2D/VBoxContainer2"]
margin_right = 47.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "Collect Diamonds
Shoot Asteroids

Spacebar - Shoot

D - Move Right
A - Move Left"
valign = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 49.0
margin_bottom = 84.0
color = Color( 0.780392, 0.941176, 0.847059, 1 )

[node name="Camera2D" type="Camera2D" parent="ColorRect"]
offset = Vector2( 1536, 2688 )
current = true
zoom = Vector2( 62.992, 62.992 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 3.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 76.0
rect_scale = Vector2( 0.75, 0.75 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 47.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "$NOK"
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 47.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "To the Moon!"
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 47.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.262745, 0.321569, 0.239216, 1 )
text = "

Press Spacebar to start"
valign = 1
autowrap = true

[node name="stonk" parent="." instance=ExtResource( 4 )]
position = Vector2( 41.086, 4 )
scale = Vector2( 0.01, 0.01 )
rocketName = "$NOK"
invertColors = true
showName = true

[node name="stonk2" parent="." instance=ExtResource( 4 )]
position = Vector2( 41.086, 36 )
scale = Vector2( 0.01, 0.01 )
rocketName = "$NOK"
invertColors = true
showName = true

[node name="stonk3" parent="." instance=ExtResource( 4 )]
position = Vector2( 41.086, 69.14 )
scale = Vector2( 0.01, 0.01 )
rocketName = "$NOK"
invertColors = true
showName = true
